--- a/Gemma Day extended.ipynb
+++ b/Gemma Day extended.ipynb
@@ -1,6 +1,17 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Before proceeding, go to \"File\" and select option \"Save a copy in drive\" then and only then proceed. <br>\n",
+        "# <font color=\"red\">  YOU WILL NOT BE ABLE TO SAVE CHANGES IN THIS NOTEBOOK </font>"
+      ],
+      "metadata": {
+        "id": "JdYtHKVpchLI"
+      },
+      "id": "JdYtHKVpchLI"
+    },
+    {
       "cell_type": "code",
       "source": [
         "!pip install langchain chromadb pypdf sentence_transformers"
@@ -13,7 +24,7 @@
         }
       },
       "id": "Bs1UDPy1aU_p",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "5a5536f0-651c-40e7-aa15-27ee0cda80b7",
       "metadata": {
         "id": "5a5536f0-651c-40e7-aa15-27ee0cda80b7"
@@ -192,7 +203,7 @@
         }
       },
       "id": "VAbTa5Zxa2Zi",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "888a86f8-2fe2-4682-bdaf-c15129ed1a32",
       "metadata": {
         "id": "888a86f8-2fe2-4682-bdaf-c15129ed1a32",
@@ -273,7 +284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "5665c695-22ea-4264-b1ac-5ba720b6d78b",
       "metadata": {
         "id": "5665c695-22ea-4264-b1ac-5ba720b6d78b",
@@ -318,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "c2a13d14-4484-46f0-8e67-277337f9d138",
       "metadata": {
         "id": "c2a13d14-4484-46f0-8e67-277337f9d138"
@@ -330,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "8ba6c8c5-9ce4-44d0-9223-6fdd77871f87",
       "metadata": {
         "id": "8ba6c8c5-9ce4-44d0-9223-6fdd77871f87",
@@ -363,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "3731aa9d-7dec-43e7-adcd-abec44abcd97",
       "metadata": {
         "id": "3731aa9d-7dec-43e7-adcd-abec44abcd97"
@@ -381,7 +392,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "d0f3c894-e84c-4aa0-a0e9-3186d42e73e4",
       "metadata": {
         "id": "d0f3c894-e84c-4aa0-a0e9-3186d42e73e4",
@@ -412,6 +423,37 @@
         "output = rag(query=query, retrieved_documents=retrieved_documents)\n",
         "print(output[0][\"generated_text\"])"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<div align=\"center\">\n",
+        "\n",
+        "  Thank you for joining us Gemma Day Extended, hope to see you next soon!\n",
+        "</div>\n",
+        "\n",
+        "<p align=\"center\">\n",
+        "  <img src=\"https://i.pinimg.com/originals/2b/a7/17/2ba717ac010d3b9f8d26e9db4da291b8.jpg\" alt=\"X.com/akajammythakkar\" width=\"20\" height=\"20\">\n",
+        "  <img src=\"https://w7.pngwing.com/pngs/521/488/png-transparent-logo-computer-icons-instagram-logo-miscellaneous-text-logo.png\" alt=\"instagram.com/akajammythakkar\" width=\"20\" height=\"20\">\n",
+        "  <img src=\"https://w7.pngwing.com/pngs/490/260/png-transparent-email-email-thumbnail.png\" alt=\"akajammythakkar@gmail.com\" width=\"20\" height=\"20\">\n",
+        "  <img src=\"https://w7.pngwing.com/pngs/940/589/png-transparent-linkedin-free-text-telephone-call-trademark-thumbnail.png\" alt=\"linkedin.com/in/akajammythakkar\" width=\"20\" height=\"20\">\n",
+        "  <a href=\"https://imjt.dev\" target=\"_blank\">@akajammythakkar</a>\n",
+        "</p>\n"
+      ],
+      "metadata": {
+        "id": "ZcuR44UwccUO"
+      },
+      "id": "ZcuR44UwccUO"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dH5QX_D9cdE5"
+      },
+      "id": "dH5QX_D9cdE5",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
